# lunaeditor

./: .eslintrc.json  .prettierrc.json  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
public/assets/icons/: README.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/actions/: event.action.ts  index.ts
src/assets/styles/: base.scss
src/assets/styles/components/: button.scss  input.scss  standard.scss
src/assets/styles/system/: titlebar.scss
src/assets/styles/themes/: luna.scss
src/components/editor/: CodeSpaceComponent.vue  CodeStatusbarComponent.vue  EditorTabComponent.vue  EditorTabView.vue
src/components/editor/data/: EditorData.ts  index.ts
src/components/editor/models/: ECodeLang.ts  ECodeTheme.ts  ICodeData.ts  ITabInfo.ts  ITabState.ts  index.ts
src/components/system/: TitlebarActionsComponent.vue  TitlebarComponent.vue  TitlebarIconComponent.vue  TitlebarLogoComponent.vue  TitlebarMenuComponent.vue  TitlebarMenuOptionComponent.vue  TitlebarMenusComponent.vue
src/components/system/actions/: file.actions.ts  index.ts  system.actions.ts
src/components/system/data/: TitlebarMenus.ts  index.ts
src/components/system/models/: IFileInformation.ts  ITitlebarMenu.ts  ITitlebarMenuOption.ts  TSystemTheme.ts  TTitlebarIconType.ts  index.ts
src/components/ui/: KbdComponent.vue  NotificationComponent.vue  NotificationPanelComponent.vue  ToolbarComponent.vue  ToolbarItemComponent.vue  ToolbarSidenavComponent.vue
src/components/ui/actions/: notification.action.ts
src/components/ui/data/: ToolbarBars.ts  index.ts
src/components/ui/models/: ENotificationType.ts  EToolbarElType.ts  INotification.ts  IToolbarBar.ts  index.ts
src/stores/: code.store.ts  file.store.ts  notification.store.ts
src/views/: EditorView.vue  SettingsModal.vue
src/views/events/: settingsEvent.ts
