[package]
name = "lunaeditor"
version = "0.1.0"
license = "MIT"
description = "An exclusive and unique text editor written in Rust"
authors = ["Vladyslav Potapenko", "Wiktor Słodkowski"]
edition = "2021"
resolver = "2"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "window-minimize",
    "window-unmaximize",
    "window-show",
    "window-close",
    "window-hide",
    "window-unminimize",
    "window-start-dragging",
    "window-maximize",
    "shell-open"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
