[package]
name = "lunaeditor"
version = "0.1.0"
license = "MIT"
description = "An exclusive and unique text editor written in Rust"
authors = ["Vladyslav Potapenko", "Wiktor Słodkowski"]
edition = "2021"
resolver = "2"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-read-dir", "clipboard-read-text", "dialog-confirm", "dialog-save", "path-all", "dialog-ask", "fs-read-file", "window-print", "window-set-fullscreen", "fs-copy-file", "process-exit", "fs-rename-file", "fs-exists", "fs-create-dir", "dialog-open", "window-create", "window-center", "clipboard-write-text", "window-set-icon", "window-set-decorations", "fs-write-file", "process-relaunch", "window-set-focus", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
